// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PipelineList renders a list of one pipeline 1`] = `
<div
  className="page"
>
  <CustomTable
    columns={
      Array [
        Object {
          "customRenderer": [Function],
          "flex": 1,
          "label": "pipelineName",
          "sortKey": "name",
        },
        Object {
          "customRenderer": [Function],
          "flex": 3,
          "label": "description",
        },
        Object {
          "flex": 1,
          "label": "uploadedOn",
          "sortKey": "created_at",
        },
      ]
    }
    emptyMessage="noPipelinesFound"
    filterLabel="filterPipelines"
    getExpandComponent={[Function]}
    initialSortColumn="created_at"
    reload={[Function]}
    rows={
      Array [
        Object {
          "expandState": undefined,
          "id": undefined,
          "otherFields": Array [
            "pipeline1",
            "test pipeline description",
            "9/22/2018, 11:05:48 AM",
          ],
        },
      ]
    }
    selectedIds={Array []}
    t={[Function]}
    toggleExpansion={[Function]}
    updateSelection={[Function]}
  />
  <UploadPipelineDialog
    onClose={[Function]}
    open={false}
    t={[Function]}
  />
</div>
`;

exports[`PipelineList renders a list of one pipeline with error 1`] = `
<div
  className="page"
>
  <CustomTable
    columns={
      Array [
        Object {
          "customRenderer": [Function],
          "flex": 1,
          "label": "pipelineName",
          "sortKey": "name",
        },
        Object {
          "customRenderer": [Function],
          "flex": 3,
          "label": "description",
        },
        Object {
          "flex": 1,
          "label": "uploadedOn",
          "sortKey": "created_at",
        },
      ]
    }
    emptyMessage="noPipelinesFound"
    filterLabel="filterPipelines"
    getExpandComponent={[Function]}
    initialSortColumn="created_at"
    reload={[Function]}
    rows={
      Array [
        Object {
          "expandState": undefined,
          "id": undefined,
          "otherFields": Array [
            "pipeline1",
            "test pipeline description",
            "9/22/2018, 11:05:48 AM",
          ],
        },
      ]
    }
    selectedIds={Array []}
    t={[Function]}
    toggleExpansion={[Function]}
    updateSelection={[Function]}
  />
  <UploadPipelineDialog
    onClose={[Function]}
    open={false}
    t={[Function]}
  />
</div>
`;

exports[`PipelineList renders a list of one pipeline with no description or created date 1`] = `
<div
  className="page"
>
  <CustomTable
    columns={
      Array [
        Object {
          "customRenderer": [Function],
          "flex": 1,
          "label": "pipelineName",
          "sortKey": "name",
        },
        Object {
          "customRenderer": [Function],
          "flex": 3,
          "label": "description",
        },
        Object {
          "flex": 1,
          "label": "uploadedOn",
          "sortKey": "created_at",
        },
      ]
    }
    emptyMessage="noPipelinesFound"
    filterLabel="filterPipelines"
    getExpandComponent={[Function]}
    initialSortColumn="created_at"
    reload={[Function]}
    rows={
      Array [
        Object {
          "expandState": undefined,
          "id": undefined,
          "otherFields": Array [
            "pipeline1",
            undefined,
            "-",
          ],
        },
      ]
    }
    selectedIds={Array []}
    t={[Function]}
    toggleExpansion={[Function]}
    updateSelection={[Function]}
  />
  <UploadPipelineDialog
    onClose={[Function]}
    open={false}
    t={[Function]}
  />
</div>
`;

exports[`PipelineList renders an empty list with empty state message 1`] = `
<div
  className="page"
>
  <CustomTable
    columns={
      Array [
        Object {
          "customRenderer": [Function],
          "flex": 1,
          "label": "pipelineName",
          "sortKey": "name",
        },
        Object {
          "customRenderer": [Function],
          "flex": 3,
          "label": "description",
        },
        Object {
          "flex": 1,
          "label": "uploadedOn",
          "sortKey": "created_at",
        },
      ]
    }
    emptyMessage="noPipelinesFound"
    filterLabel="filterPipelines"
    getExpandComponent={[Function]}
    initialSortColumn="created_at"
    reload={[Function]}
    rows={Array []}
    selectedIds={Array []}
    t={[Function]}
    toggleExpansion={[Function]}
    updateSelection={[Function]}
  />
  <UploadPipelineDialog
    onClose={[Function]}
    open={false}
    t={[Function]}
  />
</div>
`;
